- GUI:  * fixed bug: update available was shown, even if no update was available - ENGINE:  * fixed bug #158: Backup breaks on bzip if file not exists - SETUP:  * fixed: uninstall-script linebreaks  * fixed: install-script stopped on wrong Hostname - THEMES:  o Omega:   * fixed bug #147: padding changed
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@466 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/themes/omega_original/css/vhcs.css
+++ b/gui/themes/omega_original/css/vhcs.css
@@ -1,8 +1,8 @@
 body {
-	margin-left: 		0px;
-	margin-top: 		0px;
-	margin-right: 		0px;
-	margin-bottom: 		0px;
+	margin-left:		0px;
+	margin-top:			0px;
+	margin-right:		0px;
+	margin-bottom:		0px;
 	background-color:	#ffffff;
 }
 
@@ -10,122 +10,122 @@ body {
 a.link, a.link:link, a.link:visited {
 	color:				#000099;
 	text-decoration:	underline;
-	font-weight: 		normal;
+	font-weight:		normal;
 }
 
 a.link:hover, a.link:active, a.link:focus {
 	color:				#000000;
-	text-decoration: 	none;
+	text-decoration:	none;
 }
 
 a.menu, a.menu:link, a.menu:visited {
-	font-family: 		arial, helvetica, sans-serif;
-	font-size: 			9pt;
-	color: 				#000000;
-	font-weight: 		bold;
+	font-family:		arial, helvetica, sans-serif;
+	font-size:			9pt;
+	color:				#000000;
+	font-weight:		bold;
 	font-variant:		small-caps;
 }
 
 a.menu:hover, a.menu:active, a.menu:focus {
-	color: 				333333;
-	text-decoration: 	none;
+	color:				333333;
+	text-decoration:	none;
 }
 
 a.menu_active, a.menu_active:link, a.menu_active:visited  {
-	font-family: 		arial, helvetica, sans-serif;
-	font-size: 			9pt;
-	color: 				#000000;
-	font-weight: 		bold;
+	font-family:		arial, helvetica, sans-serif;
+	font-size:			9pt;
+	color:				#000000;
+	font-weight:		bold;
 	font-variant:		small-caps;
 }
 
 a.menu_active:hover, a.menu_active:active, a.menu_active:focus {
-	color: 				#333333;
-	text-decoration: 	none;
+	color:				#333333;
+	text-decoration:	none;
 }
 
 a.submenu {
-	margin-top: 		0px;
-	display: 			block;
+	margin-top:			0px;
+	display:			block;
 	font-family:		geneva, arial, helvetica, sans-serif;
 	font-weight:		bold;
-	font-size: 			11px;
-	vertical-align: 	middle;
-	color: 				#ffffff;
-	height: 			25px;
-	padding: 			1px;
+	font-size:			11px;
+	vertical-align:		middle;
+	color:				#ffffff;
+	height:				25px;
+	padding:			2px;
 	padding-left:		20px;
 	padding-top:		5px;
 	text-decoration:	none;
 }
 
 a.submenu:link, a.submenu:visited {
-	color: 				#ffffff;
-	background-image: 	url(../images/top/link_bg.jpg);
+	color:				#ffffff;
+	background-image:	url(../images/top/link_bg.jpg);
 	vertical-align:		middle;
 }
 
 a.submenu:hover, a.submenu:active, a.submenu:focus {
-	color: 				#f4dc6b;
-	background-image: 	url(../images/top/link_hover_bg.jpg);
-	vertical-align: 	middle;
+	color:				#f4dc6b;
+	background-image:	url(../images/top/link_hover_bg.jpg);
+	vertical-align:		middle;
 }
 
 a.logout, a.logout:link, a.logout:visited {
 	font-family:		arial, helvetica, sans-serif;
 	font-weight:		bold;
-	font-size: 			12px;
-	color: 				#ffffff;
-	height: 			18px;
-	padding: 			1px;
+	font-size:			12px;
+	color:				#ffffff;
+	height:				18px;
+	padding:			1px;
 	padding-left:		5px;
-	white-space: 		nowrap;
+	white-space:		nowrap;
 	text-decoration:	none;
 }
 
 a.logout:hover, a.logout:active, a.logout:focus {
-	color: 				#f4dc6b;
+	color:				#f4dc6b;
 }
 
 .login {
-	font-family: 		geneva, arial, helvetica, sans-serif;
-	font-size: 			11px;
-	color: 				#000;
-	white-space: 		nowrap;
-	text-decoration: 	none;
+	font-family:		geneva, arial, helvetica, sans-serif;
+	font-size:			11px;
+	color:				#000;
+	white-space:		nowrap;
+	text-decoration:	none;
 }
 
 a.login, a.login:link, a.login:visited {
-	font-family: 		geneva, arial, helvetica, sans-serif;
-	font-size: 			11px;
-	color: 				#3b73ca;
-	white-space: 		nowrap;
-	text-decoration: 	underline;
+	font-family:		geneva, arial, helvetica, sans-serif;
+	font-size:			11px;
+	color:				#3b73ca;
+	white-space:		nowrap;
+	text-decoration:	underline;
 }
 
 a.login:hover, a.login:active, a.login:hover {
-	color: 				#000000;
-	text-decoration: 	none;
+	color:				#000000;
+	text-decoration:	none;
 }
 
 /*********************************** OTHER ************************************/
 
 .logoutbutton {
-	padding-left:15px;
+	padding-left:		15px;
 }
 
 .title {
-	font-family: 		geneva, arial, helvetica, sans-serif;
-	font-size: 			11pt;
-	font-weight: 		bold;
+	font-family:		geneva, arial, helvetica, sans-serif;
+	font-size:			11pt;
+	font-weight:		bold;
 	font-variant:		small-caps;
-	text-decoration: 	none;
+	text-decoration:	none;
 	border-bottom:		#cccccc solid 1px;
 }
 
 .titlemenu {
-	font-family:  		geneva, arial, helvetica, sans-serif;
-	font-size: 			11pt;
+	font-family:		geneva, arial, helvetica, sans-serif;
+	font-size:			11pt;
 	font-weight:		bold;
 	font-variant:		small-caps;
 	color:				#ffffff;
@@ -134,33 +134,33 @@ a.login:hover, a.login:active, a.login:hover {
 }
 
 .bottom {
-	color: 				#ffffff;
-	font-family: 		arial, helvetica, sans-serif;
-	font-size: 			7pt;
-	background-image: 	url(../images/top/menu_bg.jpg);
+	color:				#ffffff;
+	font-family:		arial, helvetica, sans-serif;
+	font-size:			7pt;
+	background-image:	url(../images/top/menu_bg.jpg);
 }
 
 td {
-	font-family: 		arial, helvetica, sans-serif;
-	font-size: 			12px;
+	font-family:		arial, helvetica, sans-serif;
+	font-size:			12px;
 }
 
 td.content {
-	font-size: 			12px;
-	color: 				#000000;
-	white-space: 		nowrap;
-	background: 		#efefef;
-	height: 			22px;
-	padding: 			2px;
+	font-size:			12px;
+	color:				#000000;
+	white-space:		nowrap;
+	background:			#efefef;
+	height:				22px;
+	padding:			2px;
 }
 
 td.content2 {
-	font-size: 			12px;
-	color: 				#000000;
-	white-space: 		nowrap;
+	font-size:			12px;
+	color:				#000000;
+	white-space:		nowrap;
 	background:			#efefef;
-	height: 			22px;
-	padding: 			2px;
+	height:				22px;
+	padding:			2px;
 }
 
 td.content3 {
